# iaas-ronsys

./: .env.example  .env.prod.example  .env.qa.example  .gitignore  CHANGELOG.md  Makefile  Plan-Integral-de-Integración-de-Módulos-ERP-v3.md  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.qa.yml  docker-compose.yml  informe-arquitectura.md  ve.md  ve.txt
apps/backend/: .gitignore  DEBT.md  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
apps/backend/app/: __init__.py  config.py  main.py
apps/backend/app/core/: __init__.py  dependencies.py  rate_limit.py  security.py  tenant.py  ws_manager.py
apps/backend/app/models/: __init__.py  user.py
apps/backend/app/monitoring/: __init__.py  metrics.py  middleware.py
apps/backend/app/routers/: accounting.py  admin.py  auth.py  health.py  inventory.py  investment.py  restaurant.py  sales.py  setup.py  simulator.py  superadmin.py
apps/backend/app/schemas/: __init__.py  auth.py  inventory.py  restaurant.py  sales.py  simulator.py
apps/backend/app/services/: __init__.py  inventory_service.py  (+6 more)
apps/backend/scripts/: e2e_superadmin.sh  fix_passwords.py  seed.py  seed_clean.py  seed_db.py  seed_superadmin.py
apps/backend/tests/: conftest.py  test_accounting_engine.py  test_business_type.py  test_cashflow.py  test_caso5_pagos.py  test_caso6_recipes.py  test_caso7_investment.py  test_ferreteria_f0_009.py  test_kardex.py  test_menu_modifiers.py  test_rate_limit.py  test_restaurant_sections.py  test_restaurant_takeaway.py  test_sales_routes.py  test_scenarios.py  test_settings.py
(+244 files in other folders)
